--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MtSunapee/320x50_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MtSunapee/320x50_MtSunapee.htm
@@ -172,8 +172,9 @@
                 textElement.parentNode.insertBefore(newTextElement, textElement.nextElementSibling);
               }
               if(layout == 'multipleimages') {
-                content.styleProperties = "{'#cta': {y:13}}";
+                content.styleProperties = "{'#cta': {y:17}}";
                 var cta = document.querySelector("#cta");
+                cta.style.top = 0;
                 cta.style.right = "4px";
                 cta.style.width = "auto";
                 cta.style.minWidth = "50px";
