--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/ParkCity/320x50_ParkCity.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/ParkCity/320x50_ParkCity.htm
@@ -170,8 +170,9 @@
                 textElement.parentNode.insertBefore(newTextElement, textElement.nextElementSibling);
               }
               if(layout == 'multipleimages') {
-                content.styleProperties = "{'#cta': {y:13}}";
+                content.styleProperties = "{'#cta': {y:17}}";
                 var cta = document.querySelector("#cta");
+                cta.style.top = 0;
                 cta.style.right = "4px";
                 cta.style.width = "auto";
                 cta.style.minWidth = "50px";
@@ -179,7 +180,7 @@
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
-                 frameText[i].style.width = '70px';
+                 frameText[i].style.width = '80px';
                  frameText[i].style.height = '40px';
                 }
               } else if(layout == 'multipleimagesoffer') {
