--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/PaoliPeaks/728x90_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/PaoliPeaks/728x90_PaoliPeaks.htm
@@ -222,6 +222,7 @@
                 let frameTexts = document.querySelectorAll('.frameText');
                 frameTexts.forEach(function(elem) { elem.classList.add('MuseoSlab900') })
                 document.querySelector('#cta').classList.add('MuseoSlab900');
+                document.querySelector('#cta').style.fontSize = '11px';
 
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'alpinevalley'){
                  document.querySelector('#loadFont').innerHTML = '<div class="PromptBold"style="color: transparent">PromptBold</div>';
@@ -316,6 +317,7 @@
                 let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('FuturaBold') })
                  document.querySelector('#cta').classList.add('FuturaBold');
+                 document.querySelector('#cta').style.fontSize = '11px';
 
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'laurelmountain'){
                 document.querySelector('#loadFont').innerHTML = '<div class="RobotoBold"style="color: transparent">RobotoBold</div>';
@@ -356,6 +358,7 @@
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('MuseoSlab900') })
                  document.querySelector('#cta').classList.add('MuseoSlab900');
+                 document.querySelector('#cta').style.fontSize = '11px';
 
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'paolipeaks'){
                 document.querySelector('#loadFont').innerHTML = '<div class="RockwellNovaBold"style="color: transparent">RockwellNovaBold</div>';
@@ -407,6 +410,8 @@
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('PromptBold') })
                  document.querySelector('#cta').classList.add('PromptBold');
+                 document.querySelector('#cta').style.fontSize = '11px';
+                 
 
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'wildcat'){
                 document.querySelector('#loadFont').innerHTML = '<div class="PromptBold"style="color: transparent">PromptBold</div>';
