--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Keystone/320x50_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Keystone/320x50_Keystone.htm
@@ -12,6 +12,7 @@
       @font-face {
           font-family: EagleBook;
           src: url('fonts/Eagle Book.woff') format("woff");
+          ascent-override: 90%;
       }
       .EagleBook { font-family: EagleBook; }
     </style>
@@ -51,10 +52,10 @@
       <div id="frameText1" class="text-left EagleBook"
         data-text="frameText1"
         data-style="text-align:left;"
-        style="top: 3px;
+        style="top: 5px;
           left: 170px;
           width: 82px;
-          height: 44px;
+          height: 40px;
           font-size: 11px;
           letter-spacing: 1.1px;
           line-height: 1.1;">
@@ -73,10 +74,10 @@
       <div id="frameText3" class="text-left EagleBook"
         data-text="frameText3"
         data-style="text-align:left;"
-        style="top: 3px;
+        style="top: 5px;
           left: 170px;
           width: 82px;
-          height: 44px;
+          height: 40px;
           font-size: 11px;
           letter-spacing: 1.1px;
           line-height: 1.1;">
@@ -174,7 +175,7 @@
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                  frameText[i].style.width = '80px';
-                 frameText[i].style.height = '44px';
+                 frameText[i].style.height = '40px';
                 }
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {y:13}, '#productLableLogo': {css:{display:'block'}}}";
@@ -187,7 +188,7 @@
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                  frameText[i].style.width = '80px';
-                 frameText[i].style.height = '44px';
+                 frameText[i].style.height = '40px';
                 }
               }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
@@ -272,6 +273,7 @@
               }
             } catch(e) {  }
           }
+
           gsap.set('#frameText4, #backgroundImage4', { autoAlpha:0 })
           var lastFrameAnimation = function() {
             if(adData.frameText4.toLowerCase() != 'na') {
