--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/BeaverCreek/300x250_BeaverCreek.htm
@@ -64,37 +64,34 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text ivypresto-display"
+      <div id="frameText1" class="text-left ivypresto-display"
         data-text="frameText1"
-        data-style="text-align: center;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.9pt;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text ivypresto-display"
+      <div id="frameText2" class="text-left ivypresto-display"
         data-text="frameText2"
-        data-style="text-align: center;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.9pt;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text ivypresto-display"
+      <div id="frameText3" class="text-left ivypresto-display"
         data-text="frameText3"
-        data-style="text-align: center;"
         style="top: 171px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 0.9pt;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text vinila-variable"
