--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/Northstar/728x90_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/Northstar/728x90_Northstar.htm
@@ -14,11 +14,12 @@
           src: url('fonts/NeutraDisplay-Bold.woff') format("woff");
       }
       .NeutraDisplayBold { font-family: NeutraDisplayBold; } */
-      .DashiellFineBold {
+      .NewOrder-Medium { font-family: "new-order"; }
+      /* .DashiellFineBold {
         font-family: "dashiell-fine", serif;
         font-weight: 700;
         font-style: normal;
-      }
+      } */
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -27,7 +28,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #7d1c25;
+        color: #FFFFFF;
         background-color: #fff;
       }
       .frame {
@@ -40,6 +41,11 @@
       #cta { background-color: !{ctaBtn};  }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
       #ad:hover #cta { color: !{ctaBtn};  }
+      #logoImage img {
+        width: 98px;
+        top: 46%;
+        left: 8%;
+      }
     </style>
   </head>
   <body>
@@ -47,12 +53,12 @@
       <div id="backgroundImage1" style="left: 113px;height: 90px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:white;"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:white;"></div>
+      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:#7D1C25;"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:#7D1C25;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left DashiellFineBold"
+      <div id="frameText1" class="text-left NewOrder-Medium"
         data-text="frameText1"
         style="top: 4px;
           left: 442px;
@@ -62,7 +68,7 @@
           /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left DashiellFineBold"
+      <div id="frameText2" class="text-left NewOrder-Medium"
         data-text="frameText2"
         style="top: 4px;
           left: 442px;
@@ -72,7 +78,7 @@
           /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left DashiellFineBold"
+      <div id="frameText3" class="text-left NewOrder-Medium"
         data-text="frameText3"
         style="top: 4px;
           left: 442px;
@@ -82,7 +88,7 @@
           /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text DashiellFineBold"
+      <div id="cta" class="text NewOrder-Medium"
         data-text="ctaText"
         data-style="padding:0 10px 0px;"
         style="top: 29px;
@@ -98,7 +104,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="DashiellFineBold">DashiellFineBold</div>
+      <div class="NewOrder-Medium">NewOrder-Medium</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -133,9 +139,9 @@
           ],
           staticData: {
             // ref: 'ref.png'
-            logoImage: './../images/728x90_Northstar_LogoImage.png',
+            logoImage: './../images/2020_NS_NorthstarCalifornia_Stacked_RGB_White.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#7d1c25^#D7941D',
+            ctaBtnColor: '#D7941D^#ffb832',
           },
           beforeLoad: function(data){
             data.map(function(content){
