--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Northstar/300x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Northstar/300x600_Northstar.htm
@@ -14,7 +14,7 @@
           src: url('fonts/NeutraDisplay-Bold.woff') format("woff");
       }
       .NeutraDisplayBold { font-family: NeutraDisplayBold; } */
-      .NewOrder-Medium { font-family: "new-order"; }
+      .NewOrder-Medium { font-family: "new-order"; font-weight: 500;  }
       /* .DashiellFineBold {
         font-family: "dashiell-fine", serif;
         font-weight: 700;
@@ -42,7 +42,7 @@
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
       #ad:hover #cta { color: !{ctaBtn};  }
       #logoImage img {
-        width: 120px;
+        width: 242px;
         top: 5.5%;
       }
     </style>
@@ -100,7 +100,7 @@
           font-size: 14px;
           line-height: 20px;
           /* letter-spacing: 0.05em; */
-          border-radius: 20px;
+          border-radius: 5px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -141,7 +141,7 @@
           ],
           staticData: {
             // ref: 'ref.png'
-            logoImage: './../images/2020_NS_NorthstarCalifornia_Stacked_RGB_White.png',
+            logoImage: './../images/2020_NS_NorthstarCalifornia_Horizontal_RGB_White.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#D7941D^#ffb832',
           },
