--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Northstar/320x50_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Northstar/320x50_Northstar.htm
@@ -14,7 +14,7 @@
           src: url('fonts/NeutraDisplay-Bold.woff') format("woff");
       }
       .NeutraDisplayBold { font-family: NeutraDisplayBold; } */
-      .NewOrder-Medium { font-family: "new-order"; }
+      .NewOrder-Medium { font-family: "new-order"; font-weight: 500;  }
       /* .DashiellFineBold {
         font-family: "dashiell-fine", serif;
         font-weight: 700;
@@ -98,7 +98,7 @@
           font-size: 8px;
           line-height: 10px;
           /* letter-spacing: 0.5px; */
-          border-radius: 15px;
+          border-radius: 5px;
          color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
