--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Northstar/160x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Northstar/160x600_Northstar.htm
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .NewOrder-Medium { font-family: "new-order"; }
+      .NewOrder-Medium { font-family: "new-order"; font-weight: 500; }
       /* @font-face {
           font-family: NeutraDisplayBold;
           src: url('fonts/NeutraDisplay-Bold.woff') format("woff");
@@ -100,7 +100,7 @@
           font-size: 13px;
           line-height: 20px;
           /* letter-spacing: 0.05em; */
-          border-radius: 15px;
+          border-radius: 5px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
