--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       @font-face {
-          font-family: ProximaNovaBlack;
-          src: url('fonts/ProximaNova-Black.woff') format("woff");
+          font-family: ProximaNovaBold;
+          src: url('fonts/ProximaNova-Bold.woff') format("woff");
       }
-      .ProximaNovaBlack { font-family: ProximaNovaBlack; }
+      .ProximaNovaBold { font-family: ProximaNovaBold; }
       /* .MontserratBlack{
         font-family: montserrat, sans-serif;
         font-weight: 900;
@@ -45,8 +45,8 @@
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
       #logoImage img {
-        top: 4%;
-        width: 148px;
+        top: 3.5%;
+        width: 104px;
       }
     </style>
   </head>
@@ -60,40 +60,40 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text ProximaNovaBlack"
+      <div id="frameText1" class="text ProximaNovaBold"
         data-text="frameText1"
         data-style="text-align:center;"
-        style="top: 457px;
+        style="top: 459px;
           left: 15px;
           width: 130px;
           height: 70px;
           font-size: 15px;
-          /* letter-spacing: 1.6px; */
+          letter-spacing: 1.6px;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text ProximaNovaBlack"
+      <div id="frameText2" class="text ProximaNovaBold"
         data-text="frameText2"
         data-style="text-align:center;"
-        style="top: 457px;
+        style="top: 459px;
           left: 15px;
           width: 130px;
           height: 70px;
           font-size: 15px;
-          /* letter-spacing: 1.6px; */
+          letter-spacing: 1.6px;
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text ProximaNovaBlack"
+      <div id="frameText3" class="text ProximaNovaBold"
         data-text="frameText3"
         data-style="text-align:center;"
-        style="top: 457px;
+        style="top: 459px;
           left: 15px;
           width: 130px;
           height: 70px;
           font-size: 15px;
-          /* letter-spacing: 1.6px; */
+          letter-spacing: 1.6px;
           line-height: 1.3;">
       </div>
-      <div id="cta" class="text ProximaNovaBlack"
+      <div id="cta" class="text ProximaNovaBold"
         data-text="ctaText"
         data-style="text-align:center;padding:0 8px 0px;"
         style="top: 545px;
@@ -102,14 +102,14 @@
           height: 28px;
           font-size: 13px;
           line-height: 20px;
-          /* letter-spacing: 1.1px; */
+          letter-spacing: 1.1px;
           /* border-radius: 15px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="ProximaNovaBlack">ProximaNovaBlack</div>
+      <div class="ProximaNovaBold">ProximaNovaBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
