--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       @font-face {
-          font-family: ProximaNovaBlack;
-          src: url('fonts/ProximaNova-Black.woff') format("woff");
+          font-family: ProximaNovaBold;
+          src: url('fonts/ProximaNova-Bold.woff') format("woff");
       }
-      .ProximaNovaBlack { font-family: ProximaNovaBlack; }
+      .ProximaNovaBold { font-family: ProximaNovaBold; }
       /* .MontserratBlack{
         font-family: montserrat, sans-serif;
         font-weight: 900;
@@ -45,8 +45,8 @@
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
       #logoImage img {
-        top: 7%;
-        width: 163px;
+        top: 7.5%;
+        width: 114px;
       }
     </style>
   </head>
@@ -60,37 +60,37 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left ProximaNovaBlack"
+      <div id="frameText1" class="text-left ProximaNovaBold"
         data-text="frameText1"
-        style="top: 171px;
+        style="top: 173px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          /* letter-spacing: 0.1em; */
+          letter-spacing: 0.1em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left ProximaNovaBlack"
+      <div id="frameText2" class="text-left ProximaNovaBold"
         data-text="frameText2"
-        style="top: 171px;
+        style="top: 173px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          /* letter-spacing: 0.1em; */
+          letter-spacing: 0.1em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left ProximaNovaBlack"
+      <div id="frameText3" class="text-left ProximaNovaBold"
         data-text="frameText3"
-        style="top: 171px;
+        style="top: 173px;
           left: 11px;
           width: 180px;
           height: 70px;
           font-size: 17px;
-          /* letter-spacing: 0.1em; */
+          letter-spacing: 0.1em;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text ProximaNovaBlack"
+      <div id="cta" class="text ProximaNovaBold"
         data-text="ctaText"
         data-style="padding:1px 10px 0px;"
         style="top: 194px;
@@ -99,14 +99,14 @@
           height: 28px;
           font-size: 13px;
           line-height: 20px;
-          /* letter-spacing: 1px; */
+          letter-spacing: 1px;
           /* border-radius: 15px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="ProximaNovaBlack">ProximaNovaBlack</div>
+      <div class="ProximaNovaBold">ProximaNovaBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
