--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
        @font-face {
-          font-family: ProximaNovaBlack;
-          src: url('fonts/ProximaNova-Black.woff') format("woff");
+          font-family: ProximaNovaBold;
+          src: url('fonts/ProximaNova-Bold.woff') format("woff");
       }
-      .ProximaNovaBlack { font-family: ProximaNovaBlack; }
+      .ProximaNovaBold { font-family: ProximaNovaBold; }
       /* .MontserratBlack{
         font-family: montserrat, sans-serif;
         font-weight: 900;
@@ -44,6 +44,9 @@
       }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
+      #logoImage img {
+        left: 51%;
+      }
     </style>
   </head>
   <body>
@@ -56,37 +59,37 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left ProximaNovaBlack"
+      <div id="frameText1" class="text-left ProximaNovaBold"
         data-text="frameText1"
-        style="top: 3px;
+        style="top: 4.5px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          /* letter-spacing: 1.1px; */
+          letter-spacing: 1.1px; 
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left ProximaNovaBlack"
+      <div id="frameText2" class="text-left ProximaNovaBold"
         data-text="frameText2"
-        style="top: 3px;
+        style="top: 4.5px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          /* letter-spacing: 1.1px; */
+          letter-spacing: 1.1px; 
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left ProximaNovaBlack"
+      <div id="frameText3" class="text-left ProximaNovaBold"
         data-text="frameText3"
-        style="top: 3px;
+        style="top: 4.5px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          /* letter-spacing: 1.1px; */
+          letter-spacing: 1.1px;
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text ProximaNovaBlack"
+      <div id="cta" class="text ProximaNovaBold"
         data-text="ctaText"
         data-style="padding:1px 6px 0px;"
         style="top: 17px;
@@ -95,14 +98,14 @@
           height: 18px;
           font-size: 9px;
           line-height: 10px;
-          /* letter-spacing: 0.5px; */
+          letter-spacing: 0.5px;
           /* border-radius: 12px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="ProximaNovaBlack">ProximaNovaBlack</div>
+      <div class="ProximaNovaBold">ProximaNovaBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
