--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/WhistlerBlackcomb/970x250_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/WhistlerBlackcomb/970x250_WhistlerBlackcomb.htm
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       @font-face {
-          font-family: ProximaNovaBlack;
-          src: url('fonts/ProximaNova-Black.woff') format("woff");
+          font-family: ProximaNovaBold;
+          src: url('fonts/ProximaNova-Bold.woff') format("woff");
       }
-      .ProximaNovaBlack { font-family: ProximaNovaBlack; }
+      .ProximaNovaBold { font-family: ProximaNovaBold; }
       /* .MontserratBlack{
         font-family: montserrat, sans-serif;
         font-weight: 900;
@@ -45,9 +45,9 @@
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
       #logoImage img {
-        width: 250px;
+        width: 150px;
         top: 17%;
-        left: 77%;
+        left: 72%;
       }
     </style>
   </head>
@@ -61,37 +61,37 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left ProximaNovaBlack"
+      <div id="frameText1" class="text-left ProximaNovaBold"
         data-text="frameText1"
-        style="top: 70px;
+        style="top: 71px;
           left: 623px;
           width: 320px;
           height: 110px;
           font-size: 30px;
-          /* letter-spacing: 2.65px; */
+          letter-spacing: 2.65px;
           line-height: 1.13;">
       </div>
-      <div id="frameText2" class="text-left ProximaNovaBlack"
+      <div id="frameText2" class="text-left ProximaNovaBold"
         data-text="frameText2"
-        style="top: 70px;
+        style="top: 71px;
           left: 623px;
           width: 320px;
           height: 110px;
           font-size: 30px;
-          /* letter-spacing: 2.65px; */
+          letter-spacing: 2.65px;
           line-height: 1.13;">
       </div>
-      <div id="frameText3" class="text-left ProximaNovaBlack"
+      <div id="frameText3" class="text-left ProximaNovaBold"
         data-text="frameText3"
-        style="top: 70px;
+        style="top: 71px;
           left: 623px;
           width: 320px;
           height: 110px;
           font-size: 30px;
-          /* letter-spacing: 2.65px; */
+          letter-spacing: 2.65px;
           line-height: 1.13;">
       </div>
-      <div id="cta" class="text ProximaNovaBlack"
+      <div id="cta" class="text ProximaNovaBold"
         data-text="ctaText"
         data-style="padding:2px 20px 0px;"
         style="top: 193px;
@@ -101,14 +101,14 @@
           height: 40px;
           font-size: 18px;
           line-height: 22px;
-          /* letter-spacing: 0.2em; */
+          letter-spacing: 0.2em;
           /* border-radius: 20px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="ProximaNovaBlack">ProximaNovaBlack</div>
+      <div class="ProximaNovaBold">ProximaNovaBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
