--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Northstar/160x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Northstar/160x600_Northstar.htm
@@ -42,8 +42,8 @@
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
       #ad:hover #cta { color: !{ctaBtn};  }
       #logoImage img {
-        width: 75px;
-        top: 4%;
+        width: 60px;
+        top: 21.5px;
       }
     </style>
   </head>
