--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/WhistlerBlackcomb/300x600_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/WhistlerBlackcomb/300x600_WhistlerBlackcomb.htm
@@ -68,7 +68,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px; 
+          letter-spacing: 0.05em; 
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text ProximaNovaBold"
@@ -79,7 +79,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px; 
+          letter-spacing: 0.05em; 
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text ProximaNovaBold"
@@ -90,7 +90,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text ProximaNovaBold"
@@ -102,7 +102,7 @@
           height: 34px;
           font-size: 15px;
           line-height: 20px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           /* border-radius: 15px; */
           color: #fff;">
       </div>
