--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/WhistlerBlackcomb/728x90_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/WhistlerBlackcomb/728x90_WhistlerBlackcomb.htm
@@ -63,7 +63,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left ProximaNovaBold"
@@ -73,7 +73,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left ProximaNovaBold"
@@ -83,7 +83,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text ProximaNovaBold"
@@ -95,7 +95,7 @@
           height: 30px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           /* border-radius: 12px; */
           color: #fff;">
       </div>
