--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
@@ -68,7 +68,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text ProximaNovaBold"
@@ -79,7 +79,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text ProximaNovaBold"
@@ -90,7 +90,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="cta" class="text ProximaNovaBold"
@@ -102,7 +102,7 @@
           height: 28px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           /* border-radius: 15px; */
           color: #fff;">
       </div>
