--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
@@ -66,7 +66,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px; 
+          letter-spacing: 0.05em; 
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left ProximaNovaBold"
@@ -76,7 +76,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px; 
+          letter-spacing: 0.05em; 
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left ProximaNovaBold"
@@ -86,7 +86,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text ProximaNovaBold"
@@ -98,7 +98,7 @@
           height: 18px;
           font-size: 9px;
           line-height: 10px;
-          letter-spacing: 0.5px;
+          letter-spacing: 0.05em;
           /* border-radius: 12px; */
           color: #fff;">
       </div>
