--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/SevenSprings/160x600_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/SevenSprings/160x600_SevenSprings.htm
@@ -39,6 +39,9 @@
       }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
+      #logoImage img {
+        top: 51.5%;
+      }
     </style>
   </head>
   <body>
@@ -208,7 +211,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#113451"//"#F8951F";
+            ctx.fillStyle = "#89EBAD"//"#F8951F";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
